# QtTranslationFileParser

./: Cargo.toml  LICENSE  qts.xsd
src/: main.rs
