[package]
name = "qts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
quick-xml = "0.27.1"
xml-rs = "0.8.4"
xml-schema = "0.2.0"
xml-schema-derive = "0.2.0"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
